--- a/.github/workflows/AddExistingAppOrTestApp.yaml
+++ b/.github/workflows/AddExistingAppOrTestApp.yaml
@@ -23,7 +23,7 @@ permissions:
 
 defaults:
   run:
-    shell: powershell
+    shell: pwsh
 
 env:
   ALGoOrgSettings: ${{ vars.ALGoOrgSettings }}
@@ -31,7 +31,7 @@ env:
 
 jobs:
   AddExistingAppOrTestApp:
-    runs-on: [ windows-latest ]
+    runs-on: [ Ubuntu-Latest ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -40,13 +40,13 @@ jobs:
         id: init
         uses: microsoft/AL-Go-Actions/WorkflowInitialize@v3.1
         with:
-          shell: powershell
+          shell: pwsh
           eventId: "DO0090"
 
       - name: Add existing app
         uses: microsoft/AL-Go-Actions/AddExistingApp@v3.1
         with:
-          shell: powershell
+          shell: pwsh
           parentTelemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
           project: ${{ github.event.inputs.project }}
           url: ${{ github.event.inputs.url }}
@@ -56,6 +56,6 @@ jobs:
         if: always()
         uses: microsoft/AL-Go-Actions/WorkflowPostProcess@v3.1
         with:
-          shell: powershell
+          shell: pwsh
           eventId: "DO0090"
           telemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
