--- a/.github/workflows/CreateApp.yaml
+++ b/.github/workflows/CreateApp.yaml
@@ -33,7 +33,7 @@ permissions:
 
 defaults:
   run:
-    shell: powershell
+    shell: pwsh
 
 env:
   ALGoOrgSettings: ${{ vars.ALGoOrgSettings }}
@@ -41,7 +41,7 @@ env:
 
 jobs:
   CreateApp:
-    runs-on: [ windows-latest ]
+    runs-on: [ Ubuntu-Latest ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -50,20 +50,20 @@ jobs:
         id: init
         uses: microsoft/AL-Go-Actions/WorkflowInitialize@v3.1
         with:
-          shell: powershell
+          shell: pwsh
           eventId: "DO0092"
 
       - name: Read settings
         uses: microsoft/AL-Go-Actions/ReadSettings@v3.1
         with:
-          shell: powershell
+          shell: pwsh
           parentTelemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
           get: type
 
       - name: Creating a new app
         uses: microsoft/AL-Go-Actions/CreateApp@v3.1
         with:
-          shell: powershell
+          shell: pwsh
           parentTelemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
           project: ${{ github.event.inputs.project }}
           type: ${{ env.type }}
@@ -77,6 +77,6 @@ jobs:
         if: always()
         uses: microsoft/AL-Go-Actions/WorkflowPostProcess@v3.1
         with:
-          shell: powershell
+          shell: pwsh
           eventId: "DO0092"
           telemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
