--- a/.github/workflows/CreatePerformanceTestApp.yaml
+++ b/.github/workflows/CreatePerformanceTestApp.yaml
@@ -39,7 +39,7 @@ permissions:
 
 defaults:
   run:
-    shell: powershell
+    shell: pwsh
 
 env:
   ALGoOrgSettings: ${{ vars.ALGoOrgSettings }}
@@ -47,7 +47,7 @@ env:
 
 jobs:
   CreatePerformanceTestApp:
-    runs-on: [ windows-latest ]
+    runs-on: [ Ubuntu-Latest ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -56,13 +56,13 @@ jobs:
         id: init
         uses: microsoft/AL-Go-Actions/WorkflowInitialize@v3.1
         with:
-          shell: powershell
+          shell: pwsh
           eventId: "DO0102"
 
       - name: Creating a new test app
         uses: microsoft/AL-Go-Actions/CreateApp@v3.1
         with:
-          shell: powershell
+          shell: pwsh
           parentTelemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
           project: ${{ github.event.inputs.project }}
           type: 'Performance Test App'
@@ -77,6 +77,6 @@ jobs:
         if: always()
         uses: microsoft/AL-Go-Actions/WorkflowPostProcess@v3.1
         with:
-          shell: powershell
+          shell: pwsh
           eventId: "DO0102"
           telemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
