--- a/.github/workflows/CreateTestApp.yaml
+++ b/.github/workflows/CreateTestApp.yaml
@@ -35,7 +35,7 @@ permissions:
 
 defaults:
   run:
-    shell: powershell
+    shell: pwsh
 
 env:
   ALGoOrgSettings: ${{ vars.ALGoOrgSettings }}
@@ -43,7 +43,7 @@ env:
 
 jobs:
   CreateTestApp:
-    runs-on: [ windows-latest ]
+    runs-on: [ Ubuntu-Latest ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -52,13 +52,13 @@ jobs:
         id: init
         uses: microsoft/AL-Go-Actions/WorkflowInitialize@v3.1
         with:
-          shell: powershell
+          shell: pwsh
           eventId: "DO0095"
 
       - name: Creating a new test app
         uses: microsoft/AL-Go-Actions/CreateApp@v3.1
         with:
-          shell: powershell
+          shell: pwsh
           parentTelemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
           project: ${{ github.event.inputs.project }}
           type: 'Test App'
@@ -72,6 +72,6 @@ jobs:
         if: always()
         uses: microsoft/AL-Go-Actions/WorkflowPostProcess@v3.1
         with:
-          shell: powershell
+          shell: pwsh
           eventId: "DO0095"
           telemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
